--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,19 +39,20 @@
             <li>
                 <a href="#skills">Skills</a>
             </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
         </ul>
     </header>
     <!-- End header -->
 
+
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
+            <h1>Sai Dixit Tabdil</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1zk5oXdfHObhIUQOKfrupsEynQlOK_6FQ/view?usp=sharing"
+                class="btn-rounded-white">Download Resume</a>
+
         </div>
+
         <!-- End #lead-content -->
 
         <div id="lead-overlay"></div>
@@ -65,6 +66,7 @@
     </div>
     <!-- End #lead -->
 
+
     <div id="about">
         <div class="container">
             <div class="row">
@@ -73,9 +75,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        A passionate software developer with 3 years of experience developing desktop and web
+                        applications. I worked as a Research Assistant in Georgia State University building CS Tutoring
+                        web app using React.js, HTML, CSS. Previously, worked with Hyundai Mobis to develop desktop
+                        applications using C# and .NET technologies to visualize vehicle data. Also, have knowledge in
+                        Node.js, MongoDB, Express.js.
                     </p>
                 </div>
             </div>
@@ -86,28 +90,89 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="August 2018 – May 2020">
+                <h3>Georgia State University</h3>
+                <h4>Graduate Research Assistant</h4>
+                <ul class="a">
+                    <li>
+                        <p>
+                            Developing a CS Tutoring and Virtual Computer Lab web app using React.js and MongoDB,
+                            securing application with SSL.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Automating session creation and troubleshooting MySQL database issues in CVCL and CS
+                            Tutoring projects.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Developed React components to display Tutors, Students lists and added features such as
+                            waiting list, one to one meetings.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Guiding undergraduates in application development using Java, Swing Framework for Windowing
+                            Systems Programming course.
+                        </p>
+                    </li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="July 2016 – July 2018">
+                <h3>Hyundai Mobis India Limited</h3>
+                <h4>Software Developer</h4>
+                <ul class="a">
+                    <li>
+                        <p>
+                            Developed GUI using WinForms & WPF for visualizing the vehicles present on the road based on
+                            sensors data. </p>
+                    </li>
+                    <li>
+                        <p>
+                            Developed Client-Server architecture for Video and Log Data Streaming from the remote server
+                            using ZeroMQ. </p>
+                    </li>
+                    <li>
+                        <p>
+                            Built data conversion application using advanced C# concepts and design patterns which can
+                            be used through command line. </p>
+                    </li>
+                    <li>
+                        <p>
+                            Implemented API/DLL for converting log data of one format to another format like BLF, ASCII,
+                            and MDF formats. </p>
+                    </li>
+                    <li>
+                        <p>
+                            Built a module for Live simulation and graph plotting of signal values during data replaying using C#. </p>
+                    </li>
+                    <li>
+                        <p>
+                            Developed an Interop layer in C++ for communication between the C# layer and C logic layer.</p>
+                    </li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="January 2016 – February 2016">
+                <h3>Hyundai Mobis India Limited</h3>
+                <h4>Software Developer Intern</h4>
+                <ul class="a">
+                    <li>
+                        <p>
+                            Developed responsive web pages and single page applications using React.js, JavaScript, HTML, CSS, and Bootstrap. </p>
+                    </li>
+                    <li>
+                        <p>
+                            Designed and Developed RESTful APIs using Node.js for creating, viewing, and updating the employee profiles.</p>
+                    </li>
+                    <li>
+                        <p>
+                            Tested and fixed bugs of the existing Mobis Employees Management portal, which is used by about 500 employees. </p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -116,22 +181,22 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Georgia State University</h3>
+            <span class="education-date">August 2018 - May 2020</span>
+            <h4>Masters of Science in Computer Science</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                I got an opportunity to work as Research Assistant in Computer Science Department. I have gained advanced knowledge in Software Engineering, Web Application Development, Big Data Programming, Machine Learning, Cryptography, and Computational Intelligence while pursuing Masters.
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
+            <h3>Osmania University</h3>
+            <span class="education-date">October 2012 - May 2016</span>
+            <h4>Bachelor of Education in Computer Science</h4>
+            <!-- <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    
                 </li>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -139,7 +204,7 @@
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <!-- End .education-block -->
     </div>
@@ -149,17 +214,18 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Go Camping</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A Node.js responsive web application to view campgrounds from all over the world. Implemented RESTful routes to search, add, delete, update campgrounds and display campground using Express.js. User’s Authentication is done using Passport.js and MongoDB is used for storing campgrounds & users’ data. One cannot edit or delete posts created by others.
                         </p>
-                        <a href="#">View Project</a>
+                        <!-- <a href="#">View Project</a> -->
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -171,15 +237,30 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Twitter Data Analysis to Identify Depression Symptoms</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            A python-based application using machine learning and deep neural networks to identify if user is showing symptoms of depression based on their tweets. Libraries like Keras and Tensorflow are used to train neural network with a labeled dataset of over 10000 tweets. Tweets were scrapped using Tweepy scrapper and processed to analyze and predict the depression.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/tabdilsaidixit/Twitter-Data-Analysis-to-Identify-Depression-Symptoms">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Smart Cruise Control Analysis Tool</h3>
+                        <p>
+                            .NET application for Visualization and analysis of the vehicle's sensor data recorded in the field test. With WinForms/WPF as front-end and C# as the backend, this application simulates Smart Cruise Control Logic written in C and visualizes traffic environment. Developed Live graph-plotting module for analyzing sensors data along analysis report generation. </p>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
             </div>
         </div>
     </div>
@@ -188,58 +269,39 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <li>Java</li>
+            <li>C#</li>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
             <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>jQuery</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>REST</li>
+            <li>AJAX</li>
+            <li>.NET</li>
+            <li>Winforms</li>
+            <li>WPF</li>
+            <li>Express.js</li>
+            <li>Bootstrap</li>
+            <li>Hadoop</li>
+            <li>Spark</li>
+            <li>MySQL</li>
+            <li>MongoDB</li>
+            <li>Git</li>
+            <li>Linux</li>
+            <li>Visual Studio</li>
+            <li>Eclipse</li>
         </ul>
     </div>
     <!-- End #skills -->
 
-    <div id="contact">
-        <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-        <!-- End #contact-form -->
-    </div>
-    <!-- End #contact -->
 
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 copyright">
-                    <p>
-                        Copyright &copy; 2020 YOUR NAME
-                    </p>
-                </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -248,22 +310,28 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/" target="_blank"><i class="fa fa-github"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus"
+                                    aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
