--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </li>
                     <li>
                         <p>
-                            Guiding undergraduates in application development using Java, Swing Framework for Windowing
+                            Guided undergraduates in application development using Java, Swing Framework for Windowing
                             Systems Programming course.
                         </p>
                     </li>
